kubernetes/portainer/example-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: marcel.test
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
